[package]
name = "limbo_pass"
version = "0.1.0"
publish = false
authors = ["shnewto<github@shnewto.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/bevy_gltf",
    "bevy/render",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
smooth-bevy-cameras = "0.4.0"
bevy_rapier3d = "0.13.0"
bevy_kira_audio = "0.10.0"
bevy = { version = "0.7", default-features = false }
