[package]
name = "limbo_pass"
version = "0.3.0"
edition = "2024"

[dependencies]
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "0082938368d7f5bcc02a188caf63ff67df77e031" }
bevy_rapier3d = "0.32"
bevy_kira_audio = "0.24"

[dependencies.bevy]
version = "0.17"
